[package]
name = "jca"
version = "0.1.0"
authors = ["Aaron Hill <aaronhill404@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = true
panic = 'abort'
target-cpu = 'native'
debug = true

[profile.dev]
target-cpu = 'native'


[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "floodfill"
harness = false